# wvm-data-retriever

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
benchmarks/: main.py
src/: main.rs
src/utils/: arweave.rs  arweave_gql.rs  constants.rs  getters.rs  mod.rs  schemas.rs  server_handlers.rs  wvm_client.rs
