[package]
name = "wvm-data-retriever"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
ethers = "2.0.14"
ethers-providers = "2.0.14"
reqwest = {version = "0.12.7", features = ["json"]}
serde = "1.0.209"
serde_json = "1.0.127"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = {version = "1.40.0", features = ["full"] }
