[package]
name = "wvm-data-retriever"
version = "0.1.1"
edition = "2021"
description = "wvm:// data retrieval protocol"
authors = ["charmful0x <rani@decent.land>"]
license = "MIT"
repository = "https://github.com/weavevm/wvm-data-retriever"
readme = "README.md"
documentation = "https://docs.wvm.dev"
keywords = ["wvm", "wvm://", "arweave"]

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
borsh = "1.5.1"
borsh-derive = "1.5.1"
brotli = "6.0.0"
ethers = "2.0.14"
ethers-providers = "2.0.14"
reqwest = {version = "0.12.7", features = ["json"]}
serde = "1.0.209"
serde_json = "1.0.127"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = {version = "1.40.0", features = ["full"] }
wvm-borsh = { git = "https://github.com/weaveVM/wvm-reth", branch = "dev" }
